Adding some more data visualization and some feature engineering

--- a/titanic/nb/1 - Data Preprocessing.ipynb
+++ b/titanic/nb/1 - Data Preprocessing.ipynb
@@ -10,13 +10,14 @@
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
+    "import scipy as sp\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = [15, 5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,12 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define several proxis and new features"
+    "# Feature engineering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +55,31 @@
     "    T['UnknownAge'] = T['Age'].isna().astype(int)\n",
     "    T['Sp-Pa'] = T['SibSp'] - T['Parch']\n",
     "    \n",
+    "    # Define fare categories\n",
+    "    T['FareCat'] = 1\n",
+    "    T.loc[T['Fare'] <= 10.0, 'FareCat'] = 0\n",
+    "    T.loc[T['Fare'] >= 50.0, 'FareCat'] = 2\n",
+    "    \n",
+    "    T['AgeCat'] = 0 # Children and babies\n",
+    "    T.loc[T['Age'] >= 10.0, 'AgeCat'] = 1 # Adult\n",
+    "    \n",
+    "    # Estimate Age category based on Title\n",
+    "    # Mr & Mrs ... are adults\n",
+    "    # Miss & Master ... are children\n",
+    "    # All the rest should be adults too\n",
+    "    T['Title'] = T['Name'].str.split().apply(lambda name: name[1])\n",
+    "    T['AgeCatByTitle'] = 1;\n",
+    "    T.loc[T['Title'].isin(['Miss.', 'Master.']), 'AgeCatByTitle'] = 0\n",
+    "    \n",
+    "    # For missing entries overwrite AgeCat\n",
+    "    T.loc[T['UnknownAge'].astype(bool), 'AgeCat'] = T.loc[T['UnknownAge'].astype(bool), 'AgeCatByTitle']\n",
+    "    \n",
     "    # Convert to easy to process values\n",
     "\n",
     "    # 0 ... female, 1 ... male\n",
     "    T['ppSex'] = (T['Sex'] == 'male').astype(int)\n",
     "\n",
     "    T['ppEmbarked'] = T['Embarked'].astype('category').cat.codes\n",
-    "\n",
-    "    # Fill Missing age with age of 0.5\n",
-    "    T['Age'].fillna(0.5, inplace=True)\n",
-    "    \n",
     "    \n",
     "    if 'Survived' in T.columns:\n",
     "        # Split depended and indepened\n",
@@ -73,7 +89,7 @@
     "        Y = pd.DataFrame((T['Age']*np.nan).rename('Survived'))\n",
     "    \n",
     "    # Only keep some features\n",
-    "    keep = ['Pclass', 'Age', 'Sp-Pa', 'Fare', 'ppEmbarked', 'UnknownCabin', 'UnknownAge', 'ppSex']\n",
+    "    keep = ['Pclass', 'AgeCat', 'Sp-Pa', 'SibSp', 'Parch', 'FareCat', 'ppEmbarked', 'UnknownCabin', 'UnknownAge', 'ppSex']\n",
     "\n",
     "\n",
     "    return T[keep], Y"
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,133 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sp-Pa</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>ppEmbarked</th>\n",
-       "      <th>UnknownCabin</th>\n",
-       "      <th>UnknownAge</th>\n",
-       "      <th>ppSex</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>3</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Pclass   Age  Sp-Pa     Fare  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
-       "PassengerId                                                                           \n",
-       "1                 3  22.0      1   7.2500           2             1           0      1\n",
-       "2                 1  38.0      1  71.2833           0             0           0      0\n",
-       "3                 3  26.0      0   7.9250           2             1           0      0\n",
-       "4                 1  35.0      1  53.1000           2             0           0      0\n",
-       "5                 3  35.0      0   8.0500           2             1           0      1"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Xtrain.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,9 +139,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
+       "      <th>AgeCat</th>\n",
        "      <th>Sp-Pa</th>\n",
-       "      <th>Fare</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>FareCat</th>\n",
        "      <th>ppEmbarked</th>\n",
        "      <th>UnknownCabin</th>\n",
        "      <th>UnknownAge</th>\n",
@@ -269,17 +161,19 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Pclass  Age  Sp-Pa  Fare  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
-       "0       0    0      0     0           0             0           0      0"
+       "   Pclass  AgeCat  Sp-Pa  SibSp  Parch  FareCat  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
+       "0       0       0      0      0      0        0           0             0           0      0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,9 +210,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
+       "      <th>AgeCat</th>\n",
        "      <th>Sp-Pa</th>\n",
-       "      <th>Fare</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>FareCat</th>\n",
        "      <th>ppEmbarked</th>\n",
        "      <th>UnknownCabin</th>\n",
        "      <th>UnknownAge</th>\n",
@@ -331,7 +227,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -342,11 +240,11 @@
        "</div>"
       ],
       "text/plain": [
-       "   Pclass  Age  Sp-Pa  Fare  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
-       "0       0    0      0     1           0             0           0      0"
+       "   Pclass  AgeCat  Sp-Pa  SibSp  Parch  FareCat  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
+       "0       0       0      0      0      0        0           0             0           0      0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,174 +257,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fix the missing value per hand"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sp-Pa</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>ppEmbarked</th>\n",
-       "      <th>UnknownCabin</th>\n",
-       "      <th>UnknownAge</th>\n",
-       "      <th>ppSex</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1044</th>\n",
-       "      <td>3</td>\n",
-       "      <td>60.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Pclass   Age  Sp-Pa  Fare  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
-       "PassengerId                                                                        \n",
-       "1044              3  60.5      0   NaN           2             1           0      1"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Xtest[Xtest.isna().any(axis=1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Fare</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pclass</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>84.154687</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20.662183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13.675550</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Fare\n",
-       "Pclass           \n",
-       "1       84.154687\n",
-       "2       20.662183\n",
-       "3       13.675550"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Xtrain[['Pclass', 'Fare']].groupby('Pclass').mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Xtest.fillna(13.7, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Storing results\n",
     "write results to a hdf file in ../data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
