--- a/titanic/nb/2 - Modeling.ipynb
+++ b/titanic/nb/2 - Modeling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,9 +55,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
+       "      <th>AgeCat</th>\n",
        "      <th>Sp-Pa</th>\n",
-       "      <th>Fare</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>FareCat</th>\n",
        "      <th>ppEmbarked</th>\n",
        "      <th>UnknownCabin</th>\n",
        "      <th>UnknownAge</th>\n",
@@ -73,15 +75,19 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3</td>\n",
-       "      <td>22.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>7.2500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -90,9 +96,11 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>38.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>71.2833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -101,9 +109,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>26.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>7.9250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -112,9 +122,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>35.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>53.1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -123,9 +135,11 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>3</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.0500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -136,16 +150,16 @@
        "</div>"
       ],
       "text/plain": [
-       "             Pclass   Age  Sp-Pa     Fare  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
-       "PassengerId                                                                           \n",
-       "1                 3  22.0      1   7.2500           2             1           0      1\n",
-       "2                 1  38.0      1  71.2833           0             0           0      0\n",
-       "3                 3  26.0      0   7.9250           2             1           0      0\n",
-       "4                 1  35.0      1  53.1000           2             0           0      0\n",
-       "5                 3  35.0      0   8.0500           2             1           0      1"
+       "             Pclass  AgeCat  Sp-Pa  SibSp  Parch  FareCat  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
+       "PassengerId                                                                                           \n",
+       "1                 3       1      1      1      0        0           2             1           0      1\n",
+       "2                 1       1      1      1      0        2           0             0           0      0\n",
+       "3                 3       1      0      0      0        0           2             1           0      0\n",
+       "4                 1       1      1      1      0        2           2             0           0      0\n",
+       "5                 3       1      0      0      0        0           2             1           0      1"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,9 +195,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
+       "      <th>AgeCat</th>\n",
        "      <th>Sp-Pa</th>\n",
-       "      <th>Fare</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>FareCat</th>\n",
        "      <th>ppEmbarked</th>\n",
        "      <th>UnknownCabin</th>\n",
        "      <th>UnknownAge</th>\n",
@@ -201,17 +217,19 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Pclass  Age  Sp-Pa  Fare  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
-       "0       0    0      0     0           0             0           0      0"
+       "   Pclass  AgeCat  Sp-Pa  SibSp  Parch  FareCat  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
+       "0       0       0      0      0      0        0           0             0           0      0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +279,7 @@
        "            oob_score=False, random_state=123, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,9 +315,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
+       "      <th>AgeCat</th>\n",
        "      <th>Sp-Pa</th>\n",
-       "      <th>Fare</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>FareCat</th>\n",
        "      <th>ppEmbarked</th>\n",
        "      <th>UnknownCabin</th>\n",
        "      <th>UnknownAge</th>\n",
@@ -317,17 +337,19 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Pclass  Age  Sp-Pa  Fare  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
-       "0       0    0      0     0           0             0           0      0"
+       "   Pclass  AgeCat  Sp-Pa  SibSp  Parch  FareCat  ppEmbarked  UnknownCabin  UnknownAge  ppSex\n",
+       "0       0       0      0      0      0        0           0             0           0      0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,11 +411,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ytest.to_csv('../prediction/RF.csv')"
+    "Ytest.to_csv('../prediction/RF2.csv')"
    ]
   },
   {
